--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
         environment:
             DEBUG: "true"
             NODE_ENV: development
+            API_BASEURL: http://api.auth.local.nathejk.dk
 
     api:
         build:
